tests/ui/endpoint/invalid_placeholders_ty.stderr
error[E0277]: the trait bound `FooPlaceholders: OpenapiType` is not satisfied
  --> tests/ui/endpoint/invalid_placeholders_ty.rs:15:16
   |
15 | fn endpoint(_: FooPlaceholders) {
   |                ^^^^^^^^^^^^^^^ the trait `OpenapiType` is not implemented for `FooPlaceholders`
   |
note: required by a bound in `gotham_restful::EndpointWithSchema::Placeholders`
  --> src/endpoint.rs
   |
   |     #[openapi_bound("Placeholders: OpenapiType")]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `gotham_restful::EndpointWithSchema::Placeholders`

error[E0277]: the trait bound `FooPlaceholders: Clone` is not satisfied
  --> tests/ui/endpoint/invalid_placeholders_ty.rs:15:16
   |
15 | fn endpoint(_: FooPlaceholders) {
   |                ^^^^^^^^^^^^^^^ the trait `Clone` is not implemented for `FooPlaceholders`
   |
note: required by a bound in `gotham_restful::EndpointWithSchema::Placeholders`
  --> src/endpoint.rs
   |
   |     type Placeholders: PathExtractor<Body> + Clone + Sync;
   |                                              ^^^^^ required by this bound in `gotham_restful::EndpointWithSchema::Placeholders`

error[E0277]: the trait bound `FooPlaceholders: StateData` is not satisfied
  --> tests/ui/endpoint/invalid_placeholders_ty.rs:15:16
   |
15 | fn endpoint(_: FooPlaceholders) {
   |                ^^^^^^^^^^^^^^^ the trait `StateData` is not implemented for `FooPlaceholders`
   |
note: required by a bound in `gotham_restful::EndpointWithSchema::Placeholders`
  --> src/endpoint.rs
   |
   |     type Placeholders: PathExtractor<Body> + Clone + Sync;
   |                        ^^^^^^^^^^^^^^^^^^^ required by this bound in `gotham_restful::EndpointWithSchema::Placeholders`

error[E0277]: the trait bound `FooPlaceholders: StaticResponseExtender` is not satisfied
  --> tests/ui/endpoint/invalid_placeholders_ty.rs:15:16
   |
15 | fn endpoint(_: FooPlaceholders) {
   |                ^^^^^^^^^^^^^^^ the trait `StaticResponseExtender` is not implemented for `FooPlaceholders`
   |
note: required by a bound in `gotham_restful::EndpointWithSchema::Placeholders`
  --> src/endpoint.rs
   |
   |     type Placeholders: PathExtractor<Body> + Clone + Sync;
   |                        ^^^^^^^^^^^^^^^^^^^ required by this bound in `gotham_restful::EndpointWithSchema::Placeholders`

error[E0277]: the trait bound `for<'de> FooPlaceholders: serde::de::Deserialize<'de>` is not satisfied
  --> tests/ui/endpoint/invalid_placeholders_ty.rs:15:16
   |
15 | fn endpoint(_: FooPlaceholders) {
   |                ^^^^^^^^^^^^^^^ the trait `for<'de> serde::de::Deserialize<'de>` is not implemented for `FooPlaceholders`
   |
note: required by a bound in `gotham_restful::EndpointWithSchema::Placeholders`
  --> src/endpoint.rs
   |
   |     type Placeholders: PathExtractor<Body> + Clone + Sync;
   |                        ^^^^^^^^^^^^^^^^^^^ required by this bound in `gotham_restful::EndpointWithSchema::Placeholders`
